# mectrix

./: README.md  setup.cfg  setup.py
mectrix/: __init__.py  transforms.py
tests/: test_transform.py
