[metadata]
name = mectrix
version = 0.0.1
author = Axel Henningsson
author_email = nilsaxelhenningsson@gmail.com
description = Continuum mechanics tensor transformations for single crystal applications in python.
long_description = file: README.md
long_description_content_type = text/x-rst
url = https://github.com/AxelHenningsson/mectrix
project_urls =
    Documentation = https://github.com/AxelHenningsson/mectrix
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
